Manifests/foodtruck/nodeportweb.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-web
  namespace: food
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    module: web
