Manifests/foodtruck/service-es.yaml
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: food
spec:
  type: ClusterIP
  ports:
    - port: 9200
      targetPort: 9200
  selector:
    module: es
