Manifests/foodtruck/servicewebapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: food
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    module: web
