Manifests/foodtruck/food-ingressresource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-ingress
  namespace: food
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /food
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 5000
